--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,11 @@ html {
     line-height: 1.8;
 }
 
+.dark-mode {
+  background-color: rgb(17, 17, 17);
+  color: rgb(247, 245, 245);
+}
+
 /* Full height image header */
 .bgimg-1 {
     background-position: center;
@@ -58,4 +63,31 @@ th, td {
   padding: 4px;
   text-align: left;
   white-space: normal;
+}
+
+#letterOfIntroduction {
+  font-family: "Times New Roman", sans-serif
+}
+
+.indented-paragraph {
+  text-indent: 20px; /* You can adjust the value to change the amount of indentation */
+}
+#content {
+    color:black;
+    background:white;
+    opacity: 1;
+    display: block; 
+    width: 803px; 
+    height: 1132px;
+    padding:65px 65px
+}
+.container {
+  display: flex;
+  justify-content: space-between; /* Adjust this property for equal spacing */
+}
+
+.element {
+  width: 30%; /* Adjust this property to control the width of each element */
+  padding: 10px;
+  box-sizing: border-box;
 }
