--- a/css/style.css
+++ b/css/style.css
@@ -68,10 +68,11 @@ th, td {
 #letterOfIntroduction {
   font-family: "Times New Roman", sans-serif
 }
+
 .zoom-container {
   overflow: hidden;
   width: 100vw;
-  height: 100%;
+  height: 10px;
   /*border: 1px solid #ccc;*/
   position: relative;
   cursor: grab;
@@ -79,15 +80,17 @@ th, td {
 
 .zoom-content {
   width: 100vw;
-  height: 100%;
+  height: 10px;
   transform-origin: 0 0;
   transition: transform 0.5s ease-out;
   /*cursor: grabbing;*/
 }
+
 .indented-paragraph {
   cursor: auto;
   text-indent: 35px; /* You can adjust the value to change the amount of indentation */
 }
+
 #content {
     color:black;
     background:white;
@@ -101,8 +104,9 @@ th, td {
 #content h1 {
     margin: 0;
     padding: 0;
-    font-size: 40px;
+    font-size: 32px;
     font-weight: 500;
+    color: #4f81be;
     letter-spacing: 0.01rem;
     font-family: 'Cambria','Helvetica Roman','Arial', sans-serif;
 }
@@ -112,14 +116,14 @@ th, td {
     padding: 0;
     font-size: 16px;
     font-weight: 500;
+    color: #4f81be;
     letter-spacing: 0.02rem;
     font-family: 'Calibri','Arial',sans-serif;
 }
 
 #content p {
-    font-size: 16px;
-    margin: 0;
-    padding: 0;
+    font-size: 18px;
+    line-height: 1.5;
     font-family: 'Times New Roman','Arial', sans-serif;
 }
 
@@ -137,13 +141,13 @@ th, td {
 
 .element {
   width: 30%; /* Adjust this property to control the width of each element */
-  padding: 5px;
+  padding: 0 5px;
   box-sizing: border-box;
   margin: 0;
 }
 
 .closing {
-    margin: 5px;
+    margin-top: 5px;
 }
 
 .edit-content {
