--- a/css/style.css
+++ b/css/style.css
@@ -175,3 +175,23 @@ th, td {
 .boldText {
   font-weight: 600;
 }
+
+#map {
+  width: 100%;
+  height: 500px;
+}
+
+.draw-buttons {
+  position: absolute;
+  top: 70px;
+  left: 10px;
+  background-color: white;
+  padding: 5px;
+  border-radius: 5px;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
+  z-index: 1000;
+}
+
+.draw-buttons button {
+  margin-right: 5px;
+}
