--- a/css/style.css
+++ b/css/style.css
@@ -164,7 +164,7 @@ th, td {
 .schedulePreview td {
   margin:0 5px;
   padding:0 5px;
-  border: none;
+  /*border: none;*/
 }
 
 .guideText {
@@ -178,20 +178,5 @@ th, td {
 
 #map {
   width: 100%;
-  height: 500px;
-}
-
-.draw-buttons {
-  position: absolute;
-  top: 70px;
-  left: 10px;
-  background-color: white;
-  padding: 5px;
-  border-radius: 5px;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
-  z-index: 1000;
-}
-
-.draw-buttons button {
-  margin-right: 5px;
+  height: 400px;
 }
